<resources>
    <string name="app_name">Art Gallery</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="signin">SignIn</string>
    <string name="enter_your_verification_code">Enter your verification code</string>
    <string name="verification_code">Verification code</string>
    <string name="confirm">Confirm</string>
    <string name="event_name">Event Name</string>
    <string name="event_description">Event Description</string>
    <string name="pick_a_date">Pick a Date</string>
    <string name="location_name">Location Name</string>
    <string name="add_location">Add Location</string>
    <string name="add_image">Add Image</string>
    <string name="add_event">Add Event</string>
    <string name="show_location">Show Location</string>
    <string name="title_activity_nav_bar">NavBarActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="api_key">AIzaSyBY_H5nHlStCPVGsEkO_TMjdqhM8SrhpZM</string>


    <string name="login_name_hint">Name</string>
    <string name="login_mobile_number_hint">Mobile Number</string>
</resources>