<?xml version="1.0" encoding="utf-8"?>

<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--        xmlns:tools="http://schemas.android.com/tools"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:padding="40dp"-->
<!--        tools:context=".AddEventActivity">-->

<!--        <EditText-->
<!--            android:id="@+id/eventName"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/event_name"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            android:layout_marginTop="50dp"-->
<!--            android:autofillHints="name"-->
<!--            android:inputType="text" />-->

<!--        <EditText-->
<!--            android:id="@+id/eventDesc"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:hint="@string/event_description"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/eventName"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:autofillHints="name"-->
<!--            android:inputType="text"/>-->
<!--        <EditText-->
<!--            android:id="@+id/eventDate"-->
<!--            android:clickable="false"-->
<!--            android:cursorVisible="false"-->
<!--            android:focusable="false"-->
<!--            android:focusableInTouchMode="false"-->
<!--            android:hint="@string/pick_a_date"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/eventDesc"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_width="match_parent"-->
<!--            android:autofillHints="name"-->
<!--            android:inputType="date" />-->
<!--        <Button-->
<!--            android:id="@+id/addLocationBTN"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/add_location"-->
<!--            android:backgroundTint="@color/purple_700"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/eventDate"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            android:layout_marginTop="20dp"/>-->
<!--        <TextView-->
<!--            android:id="@+id/eventLocation"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/addLocationBTN"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:visibility="gone"/>-->
<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/eventLocation"-->
<!--            android:layout_marginTop="80dp"-->
<!--            android:gravity="center"-->
<!--            >-->

<!--            &lt;!&ndash;        <Button&ndash;&gt;-->
<!--            &lt;!&ndash;            android:id="@+id/addImageEventBtn"&ndash;&gt;-->
<!--            &lt;!&ndash;            android:layout_width="wrap_content"&ndash;&gt;-->
<!--            &lt;!&ndash;            android:layout_height="wrap_content"&ndash;&gt;-->
<!--            &lt;!&ndash;            android:background="@drawable/button"&ndash;&gt;-->
<!--            &lt;!&ndash;            android:text="@string/add_image"&ndash;&gt;-->
<!--            &lt;!&ndash;            android:layout_marginRight="30dp"&ndash;&gt;-->
<!--            &lt;!&ndash;            />&ndash;&gt;-->
<!--            <Button-->
<!--                android:id="@+id/addEventBTN"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:backgroundTint="@color/purple_700"-->
<!--                android:text="@string/add_event"-->
<!--                />-->


<!--        </LinearLayout>-->





<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
<!--<?xml version="1.0" encoding="utf-8"?>-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    >

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <View
            android:id="@+id/header_view"
            android:layout_width="match_parent"
            android:layout_height="150dp"

            android:background="@drawable/top">

        </View>
        <!--        <TextView-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            style="@style/loginHeader"-->
        <!--            android:text="Login"-->
        <!--            android:layout_marginTop="@dimen/loginViewsMargin"/>-->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/eventName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/event_name"
                style="@style/modifiedEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/eventDesc"
                style="@style/modifiedEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="name"
                android:hint="@string/event_description"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/eventDate"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                style="@style/modifiedEditText"
                android:hint="@string/pick_a_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/eventDesc"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:autofillHints="name"
                android:inputType="date" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:gravity="center"
            >
            <Button
                android:id="@+id/addLocationBTN"
                style="@style/loginButton"
                android:text="@string/add_location"
                android:layout_gravity="right"
                android:textColor="@color/orange"
                android:background="@color/colorAccent"
                android:layout_marginTop="@dimen/loginViewsMargin"/>

            <Button
                android:id="@+id/addEventBTN"
                style="@style/loginButton"
                android:layout_gravity="right"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:background="@color/colorAccent"
                android:text="@string/add_event"
                android:textColor="@color/orange" />

        </LinearLayout>
        <TextView
            android:id="@+id/eventLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addLocationBTN"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/buttom"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>